09-19-13
 - -oldsave parameter to load older save games (i.e. not the 1MB and
    256 string size games).
 - Warning to use -oldsave.
 - -convertsave <slot #> parameter.  Convert your old saves to the new ones!
   I don't think it will corrupt it, but do a backup first just in case.
 - Z_Free(&savebuffer) when you error out of incorrect versions.

09-15-13
 - use_wpnbinds in HERETIC.CFG.  If set to 1, the following defaults are used:
   * 'Q' for Phoenix Rod
   * 'Z' for Crossbow
   * 'X' for Dragon's Claw
   * 'C' for Hellstaf
   These binds can be customized via the HERETIC.CFG.  However, you must know
   the appropriate scancode.

09-14-13
 - Fixed joystick super speed.

09-08-13
 - Added checks for statcopy to work for episode ends.

09-05-13
 - Raised MAX_BOSS_SPOTS and MAX_MACE_SPOTS from 8 to 32.

09-04-13
 - "-statcopy <filename.txt>" will make a file (or append to it) with the
   game statistics.  Works with all game modes.  If you do not specify a
   filename it will default to STATS.TXT.  I did my best to make sure it
   will default if not specified, but if you get some weirdness not
   remembering parameters or desyncing games because of missing params it's
   likely my checks aren't as good as I thought.
  - Fixed P_SetMessage "ultimate messages" value to be cleared on death
   and finish levels.  If you died and immediately respawned in a netgame
   messages would be disabled unless you reset the value in the menu or
   another "ultimate message" appeared.  In my stats testing I also found
   that if you saved in front of an exit and "GAME RESTORED" was still on
   the screen, flick the switch, messages again would be disabled.
   If you find other weird situations where it happens let me know.
  - New cheat "HHSCOTT" to immediately finish level.  Was originally for
   testing the statcopy function, but figured I'd leave it in.

09-03-13
 - Nothing crazy, but the game will tell you that you can't load games
   from older versions.

09-02-13