@@ -1,3 +1,9 @@
+09-21-13
+ - Load a custom Gravis UltraSound INI file with -usegusini <filename.ini>.
+   Error checks are in place to see if the file exists and if you passed
+   something after -usegusini.
+ - F10 will now quit at the title screen, just like Doom.
+
 09-19-13
  - -oldsave parameter to load older save games (i.e. not the 1MB and
     256 string size games).
